--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,31 +1,37 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - '*'
-  pull_request:
-    branches:
-      - '*'
+    push:
+        branches:
+            - "*"
+    pull_request:
+        branches:
+            - "*"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.11.0"
+            - name: Setup Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: "20.11.0"
 
-      - name: Install dependencies
-        run: npm ci
+            - name: Install iac dependencies
+              run: |
+                cd iac
+                npm ci
+                cd ..
 
-      - name: Compile TypeScript
-        run: npm run build
+            - name: Install dependencies
+              run: npm ci
 
-      - name: Run tests
-        run: npm test
+            - name: Compile TypeScript
+              run: npm run build
+
+            - name: Run tests
+              run: npm test
