--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
         "module": "commonjs" /* Specify what module code is generated. */,
         // "rootDir": "./",                                  /* Specify the root folder within your source files. */
         // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-        "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+        "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
         "paths": {
             "@entities/*": ["core/structure/entities/*"],
             "@mocks/*": ["core/structure/mocks/*"],
@@ -36,12 +36,14 @@
             "@database/*": ["core/repositories/database/*"],
             "@dtos/*": ["core/repositories/database/dtos/*"],
             "@models/*": ["core/repositories/database/models/*"],
-            "@databaseRepositories/*": ["core/repositories/database/repositories/*"],
+            "@databaseRepositories/*": [
+                "core/repositories/database/repositories/*"
+            ],
             "@interfaces/*": ["core/repositories/interfaces/*"],
             "@repositoryMocks/*": ["core/repositories/mocks/*"],
             "@errors/*": ["core/helpers/errors/*"],
             "@functions/*": ["core/helpers/functions/*"]
-        },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+        } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
         // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
